--- a/pig-dice.html
+++ b/pig-dice.html
@@ -31,10 +31,10 @@
           <h3>Player <span id="playerTurn"></span>'s Turn</h3>
           <div class="row">
             <div class="col-md-6">
-              <button type="button">Click Me!</button>
+              <button type="button" id="rollDie">Roll Die</button>
             </div>
             <div class="col-md-6">
-              <button type="button">Click Me!</button>
+              <button type="button" id="holdEndTurn">Hold / End Turn</button>
             </div>
           </div>
         </div>
