--- a/pig-dice.html
+++ b/pig-dice.html
@@ -30,11 +30,16 @@
         <div class="col-md-4">
           <h3>Player <span id="playerTurn"></span>'s Turn</h3>
           <div class="row">
+            <div class="col-md-12">
+              <p>Round Points: <span id="roundPoints"></span></p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-md-6">
               <button type="button" id="rollDie">Roll Die</button>
             </div>
             <div class="col-md-6">
-              <button type="button" id="holdEndTurn">Hold / End Turn</button>
+              <button type="button" id="endTurn">End Turn</button>
             </div>
           </div>
         </div>
