show current points per round on html page. Also shows game total points for both players on html page

--- a/pig-dice.html
+++ b/pig-dice.html
@@ -16,12 +16,12 @@
         <div class="col-md-6">
           <h3>Player 1</h3>
           <br />
-          <h5>Total Points:</h5>
+          <h5>Total Points: <span id="p1Total"></span></h5>
         </div>
         <div class="col-md-6">
           <h3>Player 2</h3>
           <br />
-          <h5>Total Points:</h5>
+          <h5>Total Points: <span id="p2Total"></span></h5>
         </div>
       </div>
       <br />
@@ -31,7 +31,7 @@
           <h3>Player <span id="playerTurn"></span>'s Turn</h3>
           <div class="row">
             <div class="col-md-12">
-              <p>Round Points: <span id="roundPoints"></span></p>
+              <p>Points This Round: <span id="roundPoints"></span></p>
             </div>
           </div>
           <div class="row">
