--- a/pig-dice.html
+++ b/pig-dice.html
@@ -31,6 +31,7 @@
           <h3>Player <span id="playerTurn"></span>'s Turn</h3>
           <div class="row">
             <div class="col-md-12">
+              <p>Rolled: <span id="currentRoll"></span></p>
               <p>Points This Round: <span id="roundPoints"></span></p>
             </div>
           </div>
