--- a/pig-dice.html
+++ b/pig-dice.html
@@ -12,27 +12,42 @@
       <div class="jumbotron">
         <h1>Pig Dice</h1>
       </div>
-      <button type="button" id="startNewGame">New Game</button>
+      <button type="button" class="btn btn-outline-secondary" id="startNewGame">
+        New Game
+      </button>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" id="p1Score">
           <h3>Player 1</h3>
           <br />
           <h4><span id="p1Name"></span></h4>
-          <br />
-          <h5>Total Points: <span id="p1Total"></span></h5>
+          <div class="row">
+            <div class="col-md-6">
+              <h5>Total Points:</h5>
+            </div>
+            <div class="col-md-6">
+              <span id="p1Total"></span>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="p2Score">
           <h3>Player 2</h3>
           <br />
           <h4><span id="p2Name"></span></h4>
-          <br />
-          <h5>Total Points: <span id="p2Total"></span></h5>
+          <div class="row">
+            <div class="col-md-6">
+              <h5>Total Points:</h5>
+            </div>
+            <div class="col-md-6">
+              <span id="p2Total"></span>
+            </div>
+          </div>
         </div>
       </div>
       <br />
+      <br />
       <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4">
+        <div class="col-md-4" id="playerTurnIndicator">
           <h3>Player <span id="playerTurn"></span>'s Turn</h3>
           <div class="row">
             <div class="col-md-12">
@@ -56,10 +71,22 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <button type="button" id="rollDie">Roll Die</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary"
+                id="rollDie"
+              >
+                Roll Die
+              </button>
             </div>
             <div class="col-md-6">
-              <button type="button" id="endTurn">End Turn</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary"
+                id="endTurn"
+              >
+                End Turn
+              </button>
             </div>
           </div>
         </div>
