add memo that tells user when a player rolls a 1, which turns the die over to the other player. Ends game when a player scores 100 or more. Disable buttons when this happens

--- a/pig-dice.html
+++ b/pig-dice.html
@@ -89,6 +89,9 @@
               </button>
             </div>
           </div>
+          <div class="row" id="memoRow">
+            <span id="memo"></span>
+          </div>
         </div>
         <div class="col-md-4"></div>
       </div>
